Changed favicon (very important stuff)

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Leaflet Quick Start Guide Example</title>
+	<title>OsmSharp - Routing service demo</title>
 	<meta charset="utf-8" />
-
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/vnd.microsoft.icon" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<link rel="stylesheet" href="leaflet/leaflet.css" />
@@ -21,7 +21,6 @@
 
 	<script src="leaflet/leaflet.js"></script>
 	<script>
-
 	    var sourceIcon = L.icon({
 	        iconUrl: 'images/marker-source.png',
 	        shadowUrl: 'images/marker-shadow.png'
@@ -55,7 +54,6 @@
 	    }
 
 	    map.on('click', onMapClick);
-
 	</script>
 </body>
 </html>
