--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	        shadowUrl: 'images/marker-shadow.png'
 	    });
 
-	    var map = L.map('map').setView([50.505, 4.482], 13);
+	    var map = L.map('map').setView([51.0547, 3.2882], 15);
 
 	    L.tileLayer('http://{s}.tile.cloudmade.com/BC9A493B41014CAABB98F0471D759707/997/256/{z}/{x}/{y}.png', {
 	        maxZoom: 18,
@@ -93,10 +93,8 @@
 	            $.ajax({
 	                type: 'POST',
 	                url: 'http://osmsharp.com:666/routing?format=json',
-	                dataType: 'json',
+	                dataType: 'jsonp',
 	                data: JSON.stringify(requestData),
-	                contentType: 'application/json',
-                    processData: false,
                     success: function(response) {
                         
                     }
